# AutoMint

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
contracts/accrual/: Cargo.toml
contracts/accrual/src/: lib.rs
contracts/accrual/test_snapshots/test/: test_accrual_state_read.1.json  test_claim_accumulates_total_claimed.1.json  test_claim_after_claim_with_no_elapsed_returns_zero.1.json  test_claim_below_threshold_mints_nothing.1.json  test_claim_mints_when_threshold_met.1.json  test_claim_not_started_fails.1.json  test_claim_resets_timestamp.1.json  test_claim_with_zero_elapsed_returns_zero.1.json  test_config_fails_before_initialize.1.json  test_config_persists_across_calls.1.json  test_config_returns_correct_values.1.json  test_double_initialize_fails.1.json  test_double_start_accrual_fails.1.json  test_get_accrual_state_after_pending.1.json  test_get_accrual_state_multiple_users_independent.1.json  test_get_accrual_state_reflects_claims.1.json  test_get_accrual_state_returns_none_before_start.1.json  test_get_accrual_state_returns_started_state.1.json  test_initialize_zero_points_per_amt_fails.1.json  test_pending_points_calculation.1.json  test_pending_points_uses_hourly_rate.1.json  test_start_accrual.1.json  test_start_accrual_with_zero_rate.1.json
contracts/bot_nft/: Cargo.toml
contracts/bot_nft/src/: lib.rs
contracts/bot_nft/test_snapshots/test/: test_admin_fails_if_not_initialized.1.json  test_double_initialize_fails.1.json  test_get_tier_info.1.json  test_get_tier_info_all_tiers.1.json  test_get_user_bots_empty_for_unregistered_user.1.json  test_get_user_bots_multiple.1.json  test_get_user_bots_multiple_bots_same_user.1.json  test_get_user_bots_self_transfer_preserves_list.1.json  test_get_user_total_rate_after_transfer.1.json  test_get_user_total_rate_empty_user.1.json  test_get_user_total_rate_single_bot.1.json  test_get_user_total_rate_sums_correctly.1.json  test_get_user_total_rate_sums_owned_bots.1.json  test_initialize_sets_admin.1.json  test_mint_basic_assigns_sequential_ids.1.json  test_mint_basic_before_init_fails.1.json  test_mint_basic_increments_registry_count.1.json  test_mint_basic_sets_basic_tier_and_owner.1.json  test_mint_basic_unregistered_owner_still_mints.1.json  test_mint_tier_basic_is_free.1.json  test_mint_tier_charges_correct_price.1.json  test_mint_tier_correct_rate_assignment.1.json  test_mint_tier_insufficient_funds.1.json  test_mint_tier_sequential_ids.1.json  test_mint_tier_updates_user_bot_list.1.json  test_transfer_changes_both_owners_bot_lists.1.json  test_transfer_nonexistent_bot_fails.1.json  (+3 more)
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs  test.rs
(+116 files in other folders)
