[workspace]
resolver = "2"
members = [
    "contracts/registry",
    "contracts/bot_nft",
    "contracts/accrual",
    "contracts/marketplace",
    "contracts/token",
]

[workspace.dependencies]
soroban-sdk = { version = "21", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
