[package]
name = "automint-bot-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
automint-registry = { path = "../registry" }

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }
automint-registry = { path = "../registry", features = ["testutils"] }
automint-token = { path = "../token", features = ["testutils"] }
