[package]
name = "automint-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }
automint-bot-nft = { path = "../bot_nft", features = ["testutils"] }
automint-token = { path = "../token", features = ["testutils"] }
